# glove80-tailorkey

./: .gitignore  README.md  TUI_DESIGN.md  justfile  plan.md  pyproject.toml
docs/: TUI_CHECKLIST.md  TUI_IMPL_PLAN.md  UX_SPEC_FOOTER_NOTIFICATIONS.md  architecture.md  default.md  layout_payload.schema.json  quantum_touch.md  tailorkey.md  tui_ai_prompt.txt
docs/screenshots/5c5de38-verify/: before.txt
docs/screenshots/6a384f8-after/: after.txt
docs/screenshots/6a384f8-baseline/: before.txt
docs/screenshots/keycap-spacing/: after.txt
docs/screenshots/layer-strip-refresh/: after.txt  before.txt
layouts/default/: README.md
layouts/glorious-engrammer/: README.md
layouts/quantum_touch/metadata/: README.md
layouts/tailorkey/metadata/: README.md
original/: 85f92852-413b-4931-ac7d-cf42e6b129eb_TailorKey v4.2h Bilateral.json
scripts/: __init__.py  export_layout_schema.py  generate_tailorkey_layouts.py  tui_snapshot_demo.py
sources/: variant_metadata.json
sources/variants/: bilateral_mac.json
src/glove80/: __init__.py  base.py  metadata.py
src/glove80/cli/: __init__.py
src/glove80/default/: __init__.py  layer_data.py  layouts.py
src/glove80/families/: __init__.py
src/glove80/features/: __init__.py  base.py  bilateral.py
src/glove80/keycodes/: __init__.py
src/tailorkey_builder/: layouts.py  metadata.py
tests/: conftest.py  test_autoshift_layer.py  test_bilateral_layers.py  test_builder.py  test_cli.py  test_cursor_layer.py  test_features.py  test_gaming_layer.py  test_generate_layouts.py  test_hrm_layers.py  test_keycodes.py  test_layerref_coverage.py  test_lower_layer.py  test_magic_layer.py  test_mouse_layers.py  test_roundtrip_typed_parse.py  test_symbol_layer.py  test_typing_layer.py  utils.py
tests/default/: test_layouts.py
tests/glorious_engrammer/: test_layout.py
tests/quantum_touch/: test_layout.py
tests/tailorkey/: test_autoshift_layer.py  test_bilateral_layers.py  test_cursor_layer.py  test_gaming_layer.py  test_generate_layouts.py  test_hrm_layers.py  test_lower_layer.py  test_magic_layer.py  test_mouse_layers.py  test_symbol_layer.py  test_typing_layer.py
typings/textual/: __init__.pyi
(+130 files in other folders)
