[project]
name = "tailorkey-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tailorkey-builder = "tailorkey_builder:main"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.0",
]
