[project]
name = "glove80"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
glove80 = "glove80:main"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
